disable non-square buttons when needed, bug fixes, improve active tab detection

--- a/res/pane.html
+++ b/res/pane.html
@@ -2,7 +2,7 @@
     <div class="gridControlContainer">
         <div class="gridControlToolboxContainer">
             <div class="gridControlContainerTitle">Grid Manipulation</div>
-            <div class="gridControlContainerWarning">** Remember to save before using toolbox functions! Undo not supported! **</div>
+            <div class="gridControlContainerWarning">** Remember to save before using toolbox functions! Undo is not supported! **</div>
             
             <div class="gridControlToolboxButtons">
                 <table id="id_toolbox_button_table">
@@ -16,18 +16,18 @@
                     </tr>
                     <tr>
                         <td>
-                            <button id="id_toolbox_button_d1" class="button" tabindex="2" onclick="flip('D1')">Flip Along First Diagonal</button>
+                            <button id="id_toolbox_button_d1" class="button square_only" tabindex="2" onclick="flip('D1')">Flip Along First Diagonal</button>
                         </td>
                         <td>
-                            <button id="id_toolbox_button_d2" class="button" tabindex="3" onclick="flip('D2')">Flip Along Second Diagonal</button>
+                            <button id="id_toolbox_button_d2" class="button square_only" tabindex="3" onclick="flip('D2')">Flip Along Second Diagonal</button>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <button id="id_toolbox_button_r90" class="button" tabindex="4" onclick="flip('R90')">Rotate 90&deg; Clockwise &#8635;</button>
+                            <button id="id_toolbox_button_r90" class="button square_only" tabindex="4" onclick="flip('R90')">Rotate 90&deg; Clockwise &#8635;</button>
                         </td>
                         <td>
-                            <button id="id_toolbox_button_r270" class="button" tabindex="5" onclick="flip('R2700')">Rotate 90&deg; Counter-clockwise &#8634;</button>
+                            <button id="id_toolbox_button_r270" class="button square_only" tabindex="5" onclick="flip('R2700')">Rotate 90&deg; Counter-clockwise &#8634;</button>
                         </td>
                     </tr>
                     <tr>
